@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>SkunkWeb Regression Tests</title>
+  </head>
+
+  <body>
+    <h1>SkunkWeb Regression Tests</h1>
+
+    <ul>
+      <li><a href="remote/index.html">Remote Component Tests</a></li>
+      <li><a href="redirect/page1.html">Redirection Test</a></li>
+    </ul>
+    <hr>
+<!-- Created: Tue Oct 30 21:21:49 EST 2001 -->
+<!-- hhmts start -->
+Last modified: Tue Nov  6 20:15:46 EST 2001
+<!-- hhmts end -->
+  </body>
+</html>
