@@ -1,0 +1,1 @@
+<:redirect path=/test/redirect/page2.html queryargs=`{'foo' : 'bar'}` noescape=1:>
