@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Remote Component Tests</title>
+  </head>
+
+  <body>
+    <h1>Remote Component Tests</h1>
+    <UL>
+      <LI><A HREF="remcomp1.html">Regular component test</A></LI>
+      <LI><A HREF="remcomp2.html">Data component test</A></LI>
+    </UL>
+
+    <hr>
+<!-- Created: Tue Oct 30 18:40:09 EST 2001 -->
+<!-- hhmts start -->
+Last modified: Tue Nov  6 20:16:10 EST 2001
+<!-- hhmts end -->
+  </body>
+</html>
