@@ -1,0 +1,19 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Remote Regular Component Test Number One</title>
+  </head>
+
+  <body>
+    <h1>Remote Regular Component Test Number One</h1>
+    <h2>local call</h2>
+    <:component comp/regcomp1.comp user=FOOFOO:>
+    <h2>remote call</h2>
+    <:component "swrc://localhost/test/remote/comp/regcomp1.comp" user=FOOFOO:>
+    <hr>
+<!-- Created: Tue Oct 30 18:48:43 EST 2001 -->
+<!-- hhmts start -->
+Last modified: Tue Nov  6 20:16:56 EST 2001
+<!-- hhmts end -->
+  </body>
+</html>
